# CyREngine

./: CMakeLists.txt  Standard.md
Engine/Shaders/: cs.bat
Engine/Shaders/spv/: scene.vert.spv
Engine/Shaders/spv/imgui/: scene.frag.spv
Engine/Shaders/src/: scene.frag
Engine/Shaders/src/imgui/: scene.vert
Engine/Source/: CMakeLists.txt
Engine/Source/Editor/App/: CMakeLists.txt
Engine/Source/Editor/App/Include/: Editor.hpp
Engine/Source/Editor/App/Source/: Editor.cpp  main.cpp
Engine/Source/Runtime/App/: CMakeLists.txt
Engine/Source/Runtime/App/Include/: Engine.hpp  GlobalContext.hpp  WindowSystem.h  WindowSystem.hpp
Engine/Source/Runtime/App/Include/Render/: EditorUI.hpp  RenderSystem.hpp  VulkanUIOverlay.hpp
Engine/Source/Runtime/App/Source/: Engine.cpp  GlobalContext.cpp  WindowSystem.cpp
Engine/Source/Runtime/App/Source/Render/: EditorUI.cpp  RenderSystem.cpp  VulkanUIOverlay.cpp
Engine/Source/Runtime/Core/: CMakeLists.txt
Engine/Source/Runtime/Core/Include/Logging/: Logger.hpp
Engine/Source/Runtime/Core/Include/Misc/: Paths.hpp
Engine/Source/Runtime/Core/Include/SubSystems/: GlslCompiler.hpp
Engine/Source/Runtime/Core/Source/Logging/: Logger.cpp
Engine/Source/Runtime/Core/Source/Misc/: FileLoader.cpp  Paths.cpp
Engine/Source/Runtime/Core/Source/SubSystems/: GlslCompiler.cpp
Engine/Source/Runtime/Engine/: CMakeLists.txt
Engine/Source/Runtime/Engine/Include/Camera/: Camera.hpp
Engine/Source/Runtime/Engine/Include/SceneGraph/: Node.h  Scene.h
Engine/Source/Runtime/Engine/Include/SceneGraph/Components/: Mesh.h  Texture.h
Engine/Source/Runtime/Engine/Include/Tools/: Utils.hpp
Engine/Source/Runtime/Engine/Source/Camera/: Camera.cpp
Engine/Source/Runtime/Engine/Source/SceneGraph/: Scene.cpp  Script.cpp
Engine/Source/Runtime/Engine/Source/SceneGraph/Components/Image/: Stb.cpp
Engine/Source/Runtime/Engine/Source/SceneGraph/Scripts/: FreeCamera.cpp
Engine/Source/Runtime/Engine/Source/Tools/: Utils.cpp
Engine/Source/Runtime/Physical/: CMakeLists.txt
Engine/Source/Runtime/Render/: CMakeLists.txt
Engine/Source/Runtime/Render/Include/: StaticMesh.h
Engine/Source/Runtime/Render/Include/Core/: RenderContext.h  VulkanBuffer.h  VulkanDevice.h  VulkanSwapChain.h  VulkanTexture.h  VulkanUIOverlay.h  VulkanglTFModel.h  benchmark.hpp
Engine/Source/Runtime/Render/Include/Framework/Common/: ResourceCaching.h  ResourceCaching.hpp  VkCommon.hpp  VkError.hpp  VkStrings.hpp  error.h  helpers.h  strings.h
Engine/Source/Runtime/Render/Include/Framework/Core/: Allocated.hpp  Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  Debug.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  FrameBuffer.hpp  Image.hpp  Instance.hpp  Pipeline.hpp  PipelineLayout.hpp  PipelineState.hpp  Queue.hpp  RenderContext.hpp  RenderPass.hpp  ShaderModule.hpp  SwapChain.hpp  VulkanBuffer.hpp  VulkanDebug.hpp  VulkanDevice.hpp  VulkanResource.hpp  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanTools.hpp  VulkanglTFModel.hpp  shader_module.h
Engine/Source/Runtime/Render/Include/Framework/Misc/: BuilderBase.hpp  ResourceBindingState.hpp  ResourceCache.hpp  ResourceRecord.hpp  spirv_reflection.h
Engine/Source/Runtime/Render/Include/Framework/Platform/: Window.hpp
Engine/Source/Runtime/Render/Include/Framework/Rendering/: RenderContext.hpp  RenderFrame.hpp  RenderTarget.hpp  Subpass.hpp
Engine/Source/Runtime/Render/Include/Renderer/: BlinnPhong.h  Renderer.h  SkyBox.h
Engine/Source/Runtime/Render/Source/: StaticMesh.cpp  main.cpp
Engine/Source/Runtime/Render/Source/Core/: RenderContext.cpp  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanSwapChain.cpp  VulkanTexture.cpp  VulkanTools.cpp  VulkanUIOverlay.cpp  VulkanglTFModel.cpp
Engine/Source/Runtime/Render/Source/Framework/Common/: VkCommon.cpp  VkStrings.cpp  error.cpp
Engine/Source/Runtime/Render/Source/Framework/Core/: Allocated.cpp  Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  Debug.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  FrameBuffer.cpp  ImageCore.cpp  ImageView.cpp  Instance.cpp  Pipeline.cpp  PipelineLayout.cpp  PipelineState.cpp  QueryPool.cpp  Queue.cpp  RenderPass.cpp  SamplerCore.cpp  ShaderModule.cpp  SwapChain.cpp  VulkanBuffer.cpp  VulkanDebug.cpp  VulkanDevice.cpp  VulkanSwapChain.cpp  VulkanTexture.cpp  VulkanTools.cpp  VulkanglTFModel.cpp  shader_module.cpp
Engine/Source/Runtime/Render/Source/Framework/Misc/: BufferPool.cpp  FencePool.cpp  ResourceBindingState.cpp  ResourceCache.cpp  ResourceRecord.cpp  ResourceReplay.cpp  SemaphorePool.cpp  SpirvReflection.cpp  spirv_reflection.cpp
Engine/Source/Runtime/Render/Source/Framework/Platform/: Window.cpp
Engine/Source/Runtime/Render/Source/Framework/Rendering/: RenderContext.cpp  RenderFrame.cpp  RenderTarget.cpp  Subpass.cpp
Engine/Source/Runtime/Render/Source/Renderer/: BlinnPhong.cpp  SkyBox.cpp
